# mpost

./: .env.example  .gitignore  README.md  docker-compose.yml  justfile
apps/api/: pyproject.toml
apps/api/src/mpost_api/: __init__.py  auth.py  config.py  db.py  embeddings.py  hash_embed.py  main.py  repository.py  summary.py
apps/api/src/mpost_api/routes/: admin.py  auth.py  chat.py  documents.py  personas.py  search.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  styles.css
data/inbox/: Enemy Prisoner of War (EPW) and Detainee Operations in the RussiaUkraine Conflict.docx  README.md  fm3-39-2013.metadata.json
data/processed/: README.md
db/migrations/: 001_init.sql  002_add_review_and_page_fields.sql  003_add_authentication.sql
db/seeds/: demo_users.sql
docs/: architecture.md  deployment.md  rbac.md
infra/docker/: api.Dockerfile
scripts/: create_user.py
workers/ingestion/: pyproject.toml
workers/ingestion/src/ingestion/: __init__.py  chunk.py  config.py  embed.py  extract_text.py  load.py  main.py  metadata.py
