[project]
name = "mpost-api"
version = "0.1.0"
description = "MPOST FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.32.0",
  "huggingface-hub>=0.26.0",
  "numpy>=1.24.0",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
search = [
  "sentence-transformers>=3.0.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
