[project]
name = "mpost-ingestion"
version = "0.1.0"
description = "MPOST document ingestion worker"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "pypdf>=5.0.0",
  "pydantic-settings>=2.6.0",
  "python-docx>=1.1.0",
  "huggingface-hub>=0.26.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
embed = [
  "sentence-transformers>=3.0.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
